--- a/demo.html
+++ b/demo.html
@@ -5,7 +5,7 @@
 <title>splendid textchange demo</title>
 
 <style>
-textarea {
+#log {
     width: 400px;
     height: 200px;
 }
@@ -14,13 +14,23 @@ textarea {
 </head>
 <body>
 
-Input: <input type="text" id="input"><br>
+Input: <textarea type="text" id="input"></textarea><br>
 <textarea id="log" readonly></textarea>
 
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
 <script src="jquery.splendid.textchange.js"></script>
 <script>
 $("#input").on("textchange", function() {
+    var input = this;
+    input.value = input.value;
+
+    var range = input.createTextRange();
+    var length = (input.value && input.value.length) || 0;
+    range.collapse(true);
+    range.moveEnd("character", length);
+    range.moveStart("character", length);
+    range.select();
+
     var value = this.value;
     $("#log").val(function(i, oldLog) {
         return oldLog + "textchange, value: " + value + "\n";
