Switch to jQuery 1.10.2 + recommend IE edge mode in demo.html

--- a/demo.html
+++ b/demo.html
@@ -3,6 +3,7 @@
 <head>
 
 <title>splendid textchange demo</title>
+<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
 <style>
 textarea {
@@ -17,7 +18,7 @@ textarea {
 Input: <input type="text" id="input"><br>
 <textarea id="log" readonly></textarea>
 
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 <script src="jquery.splendid.textchange.js"></script>
 <script>
 $("#input").on("textchange", function() {
