Autofocus input field

--- a/demo.html
+++ b/demo.html
@@ -15,7 +15,7 @@ textarea {
 </head>
 <body>
 
-Input: <input type="text" id="input"><br>
+Input: <input type="text" id="input" autofocus><br>
 <textarea id="log" readonly></textarea>
 
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
