Use jQuery 1.11 from jQuery CDN in Demo.html

--- a/demo.html
+++ b/demo.html
@@ -20,7 +20,7 @@ Input:
 <textarea class="in" id="multi"></textarea><br>
 <textarea id="log" readonly></textarea>
 
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+<script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
 <script src="jquery.splendid.textchange.js"></script>
 <script>
 var log = $("#log")[0];
